2008-04-24  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Use the three argument form of AC_DEFINE everywhere since it is
	required by autoheader for parameters not in acconfig.h.

	* acconfig.h: Removed, all the parameters are defined in configure.in now.

2008-04-24  Rodrigo Kumpera  <rkumpera@novell.com>

	* runtime/Makefile.am (mcs-compileall): Turn on the verifier.

2008-04-18  Wade Berrier  <wberrier@novell.com>

	* scripts/mono-find-requires.in: Add env var to ignore scanning
	of .config files.
	Fix extra whitespace when no config reqs are found.

2008-04-17  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Enable the valgrind header check on amd64 too.

2008-04-16  Wade Berrier  <wberrier@novell.com>

	* scripts/mono-find-requires.in: Fix extraneous whitespace that makes
	some reqs from .config be on the same line as the monodis reqs.

2008-04-16  Jb Evain  <jbevain@novell.com>

	* configure.in, data/Makefile.am: add a smcs.pc file,
	that moonlight can use to locate smcs.exe.

2008-04-11  Atsushi Enomoto  <atsushi@ximian.com>

	* scripts/Makefile.am : we need genxs2 for generating 2.0 based 
	  serializer.

2008-04-08  Dean Brettle  <dean@brettle.com>

	* configure.in, runtime/Makefile.am: create a symlink at
	mono/runtime/etc/mono/2.0/Browsers/Compat.browser similar to machine.config

2008-03-26  Massimiliano Mantione  <massi@ximian.com>
	* configure.in: Added PLATFORM_LINUX automake conditional.

2008-03-25  Zoltan Varga  <vargaz@gmail.com>

	* runtime/Makefile.am (mcs-compileall): Skip net 2.1 assemblies for now.

2008-03-22  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Pass CPPFLAGS to libgc configure using ac_configure_args instead
	of exporting it. Fixes #373113.

2008-03-20  Geoff Norton  <gnorton@novell.com>

	* build-iphone.sh: Add CPLUS_INCLUDE_PATH.

2008-03-20  Kornél Pál  <kornelpal@gmail.com>

	* configure.in: Added Windows version macros to CPPFLAGS and export
	CPPFLAGS for libgc configure to ensure Windows version compatibility.