@@ -1,3 +1,7 @@
+2008-04-28  Geoff Norton  <gnorton@novell.com>
+
+	* build-iphone.sh: Some updates to work with the latest SDK.
+
 2008-04-24  Zoltan Varga  <vargaz@gmail.com>
 
 	* configure.in: Use the three argument form of AC_DEFINE everywhere since it is
